[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Test/tree/Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="Node2D" type="Node2D" parent="Node2D"]

[node name="Node2D2" type="Node2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true
[connection signal="tree_entered" from="Node2D/Node2D" to="." method="_on_Node2D_tree_entered"]
[connection signal="tree_exited" from="Node2D/Node2D" to="." method="_on_Node2D_tree_exited"]
[connection signal="tree_exiting" from="Node2D/Node2D" to="." method="_on_Node2D_tree_exiting"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
